--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .main-div {
-    border-radius: 2%;
+    border-radius: 50px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 50%;
     max-width: 600px;
@@ -48,13 +48,16 @@ input {
     border: 1px solid azure;
     text-align: center;
 }
-
 .sign_btn {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
     margin-top: 20px;
+    width: 100%;
 }
 
-.sign_btn button {
-
+.sign_btn .btn {
+    flex: 1;
     background-color: #4CAF50;
     color: white;
     padding: 15px 20px;
@@ -63,7 +66,9 @@ input {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
     font-size: 16px;
+    text-align: center;
 }
+
 
 .sign_btn button:hover {
     background-color: #45a049;
