--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,22 @@ body {
     align-items: center;
 }
 
+.table-design {
+    width: 100%;
+    margin-bottom: 10px;
+    border-collapse: collapse;
+}
+
+.table-design th, .table-design td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+.table-design th {
+    background-color: #f2f2f2;
+}
+
 .form-group {
     display: flex;
     justify-content: space-between;
@@ -48,6 +64,7 @@ input {
     border: 1px solid azure;
     text-align: center;
 }
+
 .sign_btn {
     display: flex;
     justify-content: center;
@@ -69,7 +86,26 @@ input {
     text-align: center;
 }
 
-
 .sign_btn button:hover {
     background-color: #45a049;
+}
+
+.table_btn {
+    background-color: DodgerBlue;
+    border: none; 
+    color: white; 
+    padding: 12px 16px; 
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.table_btn:hover {
+    background-color: RoyalBlue;
+}
+
+
+.table-container {
+    max-height: 400px;
+    overflow-y: auto;
+    width: 100%;
 }
